fix(website): hide scrollbars on linux/windows

--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -12,6 +12,17 @@
   }
 }
 
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .cursor {
   @apply border border-primary-500;
   animation: blink-caret 0.75s step-end infinite;
